--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,20 @@ ul {
 }
 
 
+button, input, optgroup, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+}
+
+
+
+
+
+
+
+
 .page-header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: inset 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 
@@ -907,11 +921,142 @@ transition: transform var(--transition), opacity var(--transition);
 
 
 
+.form-imput{
+    position: relative;
+    width: 360px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 36px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+button, input, optgroup, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+}
+
+/* .form{
+    width: 408px;
+    outline: 1px solid aqua;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 72px;
+    padding-bottom: 24px;
+} */
+
+.form-field{
+    outline: 1px;
+    position: relative;
+    margin-bottom: 8px;
+}
 
 
+.you-contact{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--headlines-font);
+    text-align: center;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
 
 
+.form-label{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+  
+.form-label:last-child {
+    margin-bottom: 0;
+}
 
+.form-svg{
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment-textarea{
+    resize: none;
+    width: 360px;
+    height: 120px;
+    padding: 8px 16px;
+    margin-top: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+   
+.form-field:nth-child(5){
+    margin-top: 16px;
+}
+ .form-field{
+    position: relative;
+ }
+
+.form-icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.checkbox-input{
+    appearance: none;
+    position: absolute;
+}
+
+.checkbox-icon{
+    position: absolute;
+    top: 2px;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    border: 1.25px solid var(--color-footer);
+    border-radius: 2px;
+}
+ .checkbox-labl{
+    padding-left: 20px;
+    color: #757575;
+ }
+ .checkbox-labl, privacy-policy{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+ }
+
+.form-button{
+    margin: 24px 96px 0 96px;
+}
+
+
+.form-field input{
+    width: 100%; 
+}
+ 
+
+.form-field input{
+    padding: 8px 16px;
+ }  
 
 
 
