--- a/css/styles.css
+++ b/css/styles.css
@@ -1055,14 +1055,30 @@ button, input, optgroup, select, textarea {
     width: 100%; 
 }
  
+.form-icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+
 
 .form-field input{
     padding: 8px 16px;
  }  
 
 
-
-
+.form-input{
+    position: relative;
+    width: 360px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 36px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
 .column{
@@ -1130,6 +1146,14 @@ button, input, optgroup, select, textarea {
 
 
 
+
+.icon-input{
+    position: relative;
+}
+
+.privacy-policy{
+    color: var(--accent-color);
+}
 
 
 
