--- a/css/styles.css
+++ b/css/styles.css
@@ -1021,7 +1021,6 @@ button, input, optgroup, select, textarea {
 
 .checkbox-input{
     appearance: none;
-    position: absolute;
 }
 
 .checkbox-icon{
@@ -1044,6 +1043,7 @@ button, input, optgroup, select, textarea {
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.04em;
+    display: flex;
  }
 
 .form-button{
@@ -1051,10 +1051,7 @@ button, input, optgroup, select, textarea {
 }
 
 
-.form-field input{
-    width: 100%; 
-}
- 
+
 .form-icons{
     display: flex;
     align-items: center;
@@ -1062,12 +1059,6 @@ button, input, optgroup, select, textarea {
 
 }
 
-
-
-
-.form-field input{
-    padding: 8px 16px;
- }  
 
 
 .form-input{
