--- a/css/styles.css
+++ b/css/styles.css
@@ -359,14 +359,15 @@ font-family: Roboto, sans-serif;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    fill: currentColor;
     top: 24px;
     right: 24px;
     position: absolute;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-.modal-button:hover {
+.modal-button:hover, 
+.modal-button:focus {
     background-color: var(--color-button-active);
     fill: var(--text-white-color);
 }
@@ -1010,6 +1011,7 @@ button, input, optgroup, select, textarea {
 }
  .form-field{
     position: relative;
+    margin-top: 8px;
  }
 
 .form-icons{
@@ -1021,29 +1023,24 @@ button, input, optgroup, select, textarea {
 
 .checkbox-input{
     appearance: none;
+    position: absolute;
 }
 
 .checkbox-icon{
     position: absolute;
-    top: 2px;
+    width: 1em;
+    height: 1em;
+    background-image: url(../images/checkbox.svg);
     left: 0;
-    width: 16px;
-    height: 16px;
-    border: 1.25px solid var(--color-footer);
-    border-radius: 2px;
 }
  .checkbox-labl{
     padding-left: 20px;
     color: #757575;
  }
- .checkbox-labl, privacy-policy{
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.04em;
+ .checkbox-label, privacy-policy{
+    appearance: none;
     display: flex;
+    padding: 0;
  }
 
 .form-button{
@@ -1166,6 +1163,11 @@ button, input, optgroup, select, textarea {
 
 .privacy-policy{
     color: var(--accent-color);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
 }
 
 
@@ -1186,6 +1188,13 @@ button, input, optgroup, select, textarea {
 }
 
 
-
+.text-privacy {
+    margin-left: 24px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: #757575;
+}
 
 
