--- a/css/styles.css
+++ b/css/styles.css
@@ -1027,15 +1027,17 @@ button, input, optgroup, select, textarea {
 
 .checkbox-icon{
     top: 0;
-    left: -21px;
-    position: absolute;
+    left: 21px;
     content: ' ';
-    display: inline-block;
     width: 16px;
     height: 16px;
-    border: 1.25px solid #2e2f42;
+    border: 1.25px solid #2E2F42;
     border-radius: 2px;
-    margin-right: 8px; 
+    margin-right: 8px;
+    justify-content: center;
+    display: flex;
+    align-items: center; 
+    cursor: pointer;
 }
  .checkbox-labl{
     padding-left: 20px;
@@ -1193,7 +1195,7 @@ button, input, optgroup, select, textarea {
 
 
 .text-privacy {
-    
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.33;
@@ -1204,7 +1206,13 @@ button, input, optgroup, select, textarea {
 
 .checkbox-input:checked + .checkbox-icon{
     background-color: #404BBF;
-    background-image: url(../images/checkbox.svg);
+    background-image: url(../images/vector\(6\)\(1\).svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
+
+
+.checkbox-checkbox{
+     
+}
